keycloak/.test-fixtures/no-config/keycloak.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
  annotations:
    package-operator.run/phase: deploy
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
