keycloak/.test-fixtures/no-config/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloak-headless
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
  annotations:
    package-operator.run/phase: deploy
spec:
  ports:
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
  annotations:
    package-operator.run/phase: deploy
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
  annotations:
    package-operator.run/phase: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/instance: keycloak
  serviceName: keycloak-keycloak-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/instance: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.2.5
        args: ["start"]
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs"
          readOnly: true
        ports:
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /realms/master
            port: 8443
          initialDelaySeconds: 20
          periodSeconds: 5
      volumes:
      - name: certs
        secret:
          secretName: auth-tls-secret
