keycloak/.test-fixtures/no-config/keycloak.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-keycloak
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    cert-manager.io/cluster-issuer: le-prod
    package-operator.run/phase: deploy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sso.thetechnick.ninja
      secretName: auth-tls-secret
  rules:
  - host: "sso.thetechnick.ninja"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: keycloak-keycloak
            port:
              number: 443
